k8s/deploy-with-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk079-myfirst-api-server
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk079-myfirst-api-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: 22ceb2b72953276166fdfc89896ae30a
      labels:
        app: sk079-myfirst-api-server
    spec:
      serviceAccountName: default
      containers:
      - name: myfirst-api-server
        image: amdp-registry.skala-ai.com/skala25a/sk079-myfirst-api-server:1.0.0
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: sk079-myfirst-configmap
          items:
          - key: application-prod.yaml
            path: application-prod.yaml
