k8s/deploy-with-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk081-myfirst-api-server
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk081-myfirst-api-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: 6a5caa605d7beb37fe8ccd2a7ccd4467
      labels:
        app: sk081-myfirst-api-server
    spec:
      serviceAccountName: default
      containers:
      - name: myfirst-api-server
        image: amdp-registry.skala-ai.com/skala25a/sk081-myfirst-api-server:1.0.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: sk081-myfirst-configmap
          items:
          - key: application-prod.yaml
            path: application-prod.yaml
