k8s/deploy-with-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk079-myfirst-api-server
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk079-myfirst-api-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 6a5caa605d7beb37fe8ccd2a7ccd4467
      labels:
        app: sk079-myfirst-api-server
    spec:
      serviceAccountName: default
      containers:
      - name: myfirst-api-server
        image: amdp-registry.skala-ai.com/skala25a/sk079-myfirst-api-server:1.0.0
        imagePullPolicy: Always
        volumeMounts:
        - name: efs-config
          mountPath: /app/config
          readOnly: true

      volumes:
      - name: efs-config
        persistentVolumeClaim:
          claimName: sk079-efs-sc-myfirst-api-server-pvc
